--- a/README.adoc
+++ b/README.adoc
@@ -1,3 +1,5 @@
+image::https://forthebadge.com/images/badges/designed-in-inkscape.svg[inkscape]
+
 = Ska Vectors
 
 En este repo se encontraran ilustraciones vectoriales relacionadas con el ska.
@@ -5,5 +7,6 @@ En este repo se encontraran ilustraciones vectoriales relacionadas con el ska.
 El primer trabajo realizado es una intervención al escudo de Colombia,
 adaptandolo al estilo del arte en el ska.
 
-image::https://github.com/afmorenosa/ska_vectors/blob/main/Escudo/Escudo.svg[escudo, 300]
-image::https://github.com/afmorenosa/ska_vectors/blob/main/Escudo/Escudo_circulo.svg[escudo-circulo, 300]
+
+image::https://github.com/ccatamorenos/ska_vectors/blob/main/Escudo/Escudo.svg[escudo, 300]
+image::https://github.com/ccatamorenos/ska_vectors/blob/main/Escudo/Escudo_circulo.svg[escudo-circulo, 300]
